updates on background image, draping styles, and our team

--- a/Drapes/contact.html
+++ b/Drapes/contact.html
@@ -6,8 +6,8 @@
 
 </head>
 
-<body background="https://t3.ftcdn.net/jpg/00/98/78/46/360_F_98784649_tWwDkRMkBlNBzgFPgIyHz25yfq8IvLQf.jpg">
-    <div class="main">
+<body>
+    <div class="header">
         <div class="navbar">
             <h3><a href="index.html">Company Name</a></h3>
             <ul>
@@ -27,3 +27,4 @@
     <footer>Company Name</footer>
     <script type="text/javascript" src="script.js"></script>
 </body>
+</html>
