--- a/Drapes/drapingStyles.html
+++ b/Drapes/drapingStyles.html
@@ -3,11 +3,10 @@
 <head>
     <title>Company Name</title>
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 
-<body background="https://t3.ftcdn.net/jpg/00/98/78/46/360_F_98784649_tWwDkRMkBlNBzgFPgIyHz25yfq8IvLQf.jpg">
-    <div class="main">
+<body>
+    <div class="header">
         <div class="navbar">
             <h3><a href="index.html">Company Name</a></h3>
             <ul>
@@ -24,6 +23,59 @@
             <h1>Draping Styles</h1>
         </div>
     </div>
+    <div class="main">
+        <div class="draping-styles-container">
+            <div class="draping-style">
+                <img src="https://via.placeholder.com/300" alt="Style 1">
+                <h3>Style 1</h3>
+            </div>
+            <div class="draping-style">
+                <img src="https://via.placeholder.com/300" alt="Style 2">
+                <h3>Style 2</h3>
+            </div>
+            <div class="draping-style">
+                <img src="https://via.placeholder.com/300" alt="Style 3">
+                <h3>Style 3</h3>
+            </div>
+            <div class="draping-style">
+                <img src="https://via.placeholder.com/300" alt="Style 4">
+                <h3>Style 4</h3>
+            </div>
+            <div class="draping-style">
+                <img src="https://via.placeholder.com/300" alt="Style 5">
+                <h3>Style 5</h3>
+            </div>
+            <div class="draping-style">
+                <img src="https://via.placeholder.com/300" alt="Style 6">
+                <h3>Style 6</h3>
+            </div>
+            <div class="draping-style">
+                <img src="https://via.placeholder.com/300" alt="Style 7">
+                <h3>Style 7</h3>
+            </div>
+            <div class="draping-style">
+                <img src="https://via.placeholder.com/300" alt="Style 8">
+                <h3>Style 8</h3>
+            </div>
+            <div class="draping-style">
+                <img src="https://via.placeholder.com/300" alt="Style 9">
+                <h3>Style 9</h3>
+            </div>
+            <div class="draping-style">
+                <img src="https://via.placeholder.com/300" alt="Style 10">
+                <h3>Style 10</h3>
+            </div>
+            <div class="draping-style">
+                <img src="https://via.placeholder.com/300" alt="Style 11">
+                <h3>Style 11</h3>
+            </div>
+            <div class="draping-style">
+                <img src="https://via.placeholder.com/300" alt="Style 12">
+                <h3>Style 12</h3>
+            </div>
+        </div>
+    </div>
     <footer>Company Name</footer>
     <script type="text/javascript" src="script.js"></script>
 </body>
+</html>
