--- a/Drapes/ourTeam.html
+++ b/Drapes/ourTeam.html
@@ -3,11 +3,9 @@
 <head>
     <title>Company Name</title>
     <link rel="stylesheet" href="css/style.css">
-
 </head>
-
-<body background="https://t3.ftcdn.net/jpg/00/98/78/46/360_F_98784649_tWwDkRMkBlNBzgFPgIyHz25yfq8IvLQf.jpg">
-    <div class="main">
+<body>
+    <div class="header">
         <div class="navbar">
             <h3><a href="index.html">Company Name</a></h3>
             <ul>
@@ -24,6 +22,31 @@
             <h1>Our Team</h1>
         </div>
     </div>
+    <div class="aboutMe">
+        <div class="person">
+            <img src="https://via.placeholder.com/150" alt="Person Image">
+            <div class="details">
+                <h4 class="name">Person Name: Part of Company</h4>
+                <p class="discription">This can be a description of what you do outside of this job. What you like to do for hobbies and maybe some other interests.</p>
+            </div>
+        </div>
+        <div class="person">
+            <img src="https://via.placeholder.com/150" alt="Person Image">
+            <div class="details">
+                <h4 class="name">Person Name: Part of Company</h4>
+                <p class="discription">This can be a description of what you do outside of this job. What you like to do for hobbies and maybe some other interests.</p>
+            </div>
+        </div>
+        <div class="person">
+            <img src="https://via.placeholder.com/150" alt="Person Image">
+            <div class="details">
+                <h4 class="name">Person Name: Part of Company</h4>
+                <p class="discription">This can be a description of what you do outside of this job. What you like to do for hobbies and maybe some other interests.</p>
+            </div>
+        </div>
+    </div>
+
     <footer>Company Name</footer>
     <script type="text/javascript" src="script.js"></script>
 </body>
+</html>
