--- a/Drapes/about.html
+++ b/Drapes/about.html
@@ -3,7 +3,9 @@
 <head>
     <title>Company Name</title>
     <link rel="stylesheet" href="css/style.css">
+
 </head>
+
 <body>
     <div class="header">
         <div class="navbar">
@@ -19,34 +21,9 @@
             </ul>
         </div>
         <div class="title">
-            <h1>Company Name</h1>
+            <h1>About</h1>
         </div>
     </div>
-    <div class="main">
-        <div class="aboutMe">
-        <div class="person">
-            <img src="https://via.placeholder.com/150" alt="Person Image">
-            <div class="details">
-                <h4 class="name">Person Name: Part of Company</h4>
-                <p class="discription">This can be a description of what you do outside of this job. What you like to do for hobbies and maybe some other interests.</p>
-            </div>
-        </div>
-        <div class="person">
-            <img src="https://via.placeholder.com/150" alt="Person Image">
-            <div class="details">
-                <h4 class="name">Person Name: Part of Company</h4>
-                <p class="discription">This can be a description of what you do outside of this job. What you like to do for hobbies and maybe some other interests.</p>
-            </div>
-        </div>
-        <div class="person">
-            <img src="https://via.placeholder.com/150" alt="Person Image">
-            <div class="details">
-                <h4 class="name">Person Name: Part of Company</h4>
-                <p class="discription">This can be a description of what you do outside of this job. What you like to do for hobbies and maybe some other interests.</p>
-            </div>
-        </div>
-    </div>
-
     <footer>Company Name</footer>
     <script type="text/javascript" src="script.js"></script>
 </body>
