--- a/Drapes/index.html
+++ b/Drapes/index.html
@@ -4,8 +4,8 @@
     <title>Company Name</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body background="img/mainPage.jpg">
-    <div class="main">
+<body>
+    <div class="header">
         <div class="navbar">
             <h3><a href="index.html">Company Name</a></h3>
             <ul>
@@ -26,4 +26,3 @@
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
-
