--- a/Drapes/servicesAndPricing.html
+++ b/Drapes/servicesAndPricing.html
@@ -6,8 +6,8 @@
 
 </head>
 
-<body background="https://t3.ftcdn.net/jpg/00/98/78/46/360_F_98784649_tWwDkRMkBlNBzgFPgIyHz25yfq8IvLQf.jpg">
-    <div class="main">
+<body>
+    <div class="header">
         <div class="navbar">
             <h3><a href="index.html">Company Name</a></h3>
             <ul>
@@ -20,10 +20,11 @@
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
         </div>
-        <div id="sp">
-            <h1>Services and Pricing</h1>
+        <div class="title">
+            <h1>Services & Pricing</h1>
         </div>
     </div>
     <footer>Company Name</footer>
     <script type="text/javascript" src="script.js"></script>
 </body>
+</html>
