--- a/Drapes/drapingStyles.html
+++ b/Drapes/drapingStyles.html
@@ -26,16 +26,16 @@
     <div class="main">
         <div class="draping-styles-container">
             <div class="draping-style">
-                <img src="https://via.placeholder.com/300" alt="Style 1">
-                <h3>Style 1</h3>
+                <img src="img/dupatta.jpg" alt="Dupatta Style">
+                <h3>Dupatta Style</h3>
             </div>
             <div class="draping-style">
-                <img src="https://via.placeholder.com/300" alt="Style 2">
-                <h3>Style 2</h3>
+                <img src="img/cotton.jpg" alt="Cotton Saree">
+                <h3>Cotton Saree</h3>
             </div>
             <div class="draping-style">
-                <img src="https://via.placeholder.com/300" alt="Style 3">
-                <h3>Style 3</h3>
+                <img src="img/mermaid.jpg" alt="Mermaid Style">
+                <h3>Mermaid Style</h3>
             </div>
             <div class="draping-style">
                 <img src="https://via.placeholder.com/300" alt="Style 4">
