--- a/Drapes/index.html
+++ b/Drapes/index.html
@@ -22,7 +22,7 @@
             <h1>Company Name</h1>
         </div>
     </div>
-    <footer>Company Name</footer>
+    <footer>&copy; 2024 Company Name. All rights reserved.</footer>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
