--- a/Drapes/about.html
+++ b/Drapes/about.html
@@ -3,7 +3,6 @@
 <head>
     <title>Company Name</title>
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
@@ -24,7 +23,13 @@
             <h1>About</h1>
         </div>
     </div>
+
+    <div class="about-me">
+        <img src="https://t3.ftcdn.net/jpg/01/65/63/94/360_F_165639425_kRh61s497pV7IOPAjwjme1btB8ICkV0L.jpg" alt="Portrait of Person" class="portrait">
+        <p class="description">John Doe is an experienced professional with a passion for excellence. With over 10 years in the industry, John has consistently demonstrated a commitment to quality and innovation. Outside of work, John enjoys hiking, reading, and spending time with family.</p>
+    </div>
+
     <footer>Company Name</footer>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
