--- a/Drapes/drapingStyles.html
+++ b/Drapes/drapingStyles.html
@@ -38,12 +38,12 @@
                 <h3>Mermaid Style</h3>
             </div>
             <div class="draping-style">
-                <img src="https://via.placeholder.com/300" alt="Style 4">
-                <h3>Style 4</h3>
+                <img src="img/bengali.jpg" alt="Bengali Style">
+                <h3>Bengali Style</h3>
             </div>
             <div class="draping-style">
-                <img src="https://via.placeholder.com/300" alt="Style 5">
-                <h3>Style 5</h3>
+                <img src="img/silk.jpg" alt="Silk Saree">
+                <h3>Silk Saree</h3>
             </div>
             <div class="draping-style">
                 <img src="https://via.placeholder.com/300" alt="Style 6">
