--- a/Drapes/contact.html
+++ b/Drapes/contact.html
@@ -42,6 +42,9 @@
             <label for="email">Email Address:</label>
             <input type="email" id="email" name="email" required>
 
+            <label for="phone">Phone Number:</label>
+            <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" title="Phone number format: xxx-xxx-xxxx" required>
+
             <label for="event-date">Date of Event:</label>
             <input type="date" id="event-date" name="event_date" required>
 
