updated to mobile, add pricing

--- a/Drapes/drapingStyles.html
+++ b/Drapes/drapingStyles.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Company Name</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sathya Drapes</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="header">
         <div class="navbar">
-            <h3><a href="index.html">Company Name</a></h3>
+            <h3><a href="index.html">Sathya Drapes</a></h3>
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="ourTeam.html">OUR TEAM</a></li>
+                <!-- <li><a href="ourTeam.html">OUR TEAM</a></li> -->
                 <li><a href="drapingStyles.html">DRAPING STYLES</a></li>
-                <li><a href="gallery.html">GALLERY</a></li>
+                <!-- <li><a href="gallery.html">GALLERY</a></li> -->
                 <li><a href="servicesAndPricing.html">SERVICES & PRICING</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
@@ -45,7 +47,7 @@
                 <img src="img/silk.jpg" alt="Silk Saree">
                 <h3>Silk Saree</h3>
             </div>
-            <div class="draping-style">
+            <!-- <div class="draping-style">
                 <img src="https://via.placeholder.com/300" alt="Style 6">
                 <h3>Style 6</h3>
             </div>
@@ -72,10 +74,10 @@
             <div class="draping-style">
                 <img src="https://via.placeholder.com/300" alt="Style 12">
                 <h3>Style 12</h3>
-            </div>
+            </div> -->
         </div>
     </div>
-    <footer>Company Name</footer>
+    <footer>&copy; 2024 Sathya Drapes. All rights reserved.</footer>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
