--- a/Drapes/about.html
+++ b/Drapes/about.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Company Name</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sathya Drapes</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="header">
         <div class="navbar">
-            <h3><a href="index.html">Company Name</a></h3>
+            <h3><a href="index.html">Sathya Drapes</a></h3>
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="ourTeam.html">OUR TEAM</a></li>
+                <!-- <li><a href="ourTeam.html">OUR TEAM</a></li> -->
                 <li><a href="drapingStyles.html">DRAPING STYLES</a></li>
-                <li><a href="gallery.html">GALLERY</a></li>
+                <!-- <li><a href="gallery.html">GALLERY</a></li> -->
                 <li><a href="servicesAndPricing.html">SERVICES & PRICING</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
@@ -29,7 +31,7 @@
         <p class="description">John Doe is an experienced professional with a passion for excellence. With over 10 years in the industry, John has consistently demonstrated a commitment to quality and innovation. Outside of work, John enjoys hiking, reading, and spending time with family.</p>
     </div>
 
-    <footer>Company Name</footer>
+    <footer>&copy; 2024 Sathya Drapes. All rights reserved.</footer>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
