--- a/Drapes/servicesAndPricing.html
+++ b/Drapes/servicesAndPricing.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Company Name</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sathya Drapes</title>
     <link rel="stylesheet" href="css/style.css">
-
 </head>
-
 <body>
     <div class="header">
         <div class="navbar">
-            <h3><a href="index.html">Company Name</a></h3>
+            <h3><a href="index.html">Sathya Drapes</a></h3>
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="ourTeam.html">OUR TEAM</a></li>
+                <!-- <li><a href="ourTeam.html">OUR TEAM</a></li> -->
                 <li><a href="drapingStyles.html">DRAPING STYLES</a></li>
-                <li><a href="gallery.html">GALLERY</a></li>
+                <!-- <li><a href="gallery.html">GALLERY</a></li> -->
                 <li><a href="servicesAndPricing.html">SERVICES & PRICING</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
             </ul>
@@ -24,7 +24,22 @@
             <h1>Services & Pricing</h1>
         </div>
     </div>
-    <footer>Company Name</footer>
+    
+    <!-- New Pricing Section -->
+    <div class="pricing-section">
+        <h2>Our Pricing</h2>
+        <div class="price-item">
+            <h4>Regular Saree</h4>
+            <p>$25</p>
+        </div>
+        <div class="price-item">
+            <h4>Bridal Silk Saree</h4>
+            <p>$35</p>
+        </div>
+        <!-- Add more services and prices as needed -->
+    </div>
+
+    <footer>&copy; 2024 Sathya Drapes. All rights reserved.</footer>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
