--- a/Drapes/about.html
+++ b/Drapes/about.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sathya Drapes</title>
+    <title>Sakhi Drapes</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="header">
         <div class="navbar">
-            <h3><a href="index.html">Sathya Drapes</a></h3>
+            <h3><a href="index.html">Sakhi Drapes</a></h3>
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
@@ -31,7 +31,7 @@
         <p class="description">John Doe is an experienced professional with a passion for excellence. With over 10 years in the industry, John has consistently demonstrated a commitment to quality and innovation. Outside of work, John enjoys hiking, reading, and spending time with family.</p>
     </div>
 
-    <footer>&copy; 2024 Sathya Drapes. All rights reserved.</footer>
+    <footer>&copy; 2024 Sakhi Drapes. All rights reserved.</footer>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
