--- a/Drapes/ourTeam.html
+++ b/Drapes/ourTeam.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
-    <title>Sathya Drapes</title>
+    <title>Sakhi Drapes</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="header">
         <div class="navbar">
-            <h3><a href="index.html">Sathya Drapes</a></h3>
+            <h3><a href="index.html">Sakhi Drapes</a></h3>
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <footer>&copy; 2024 Sathya Drapes. All rights reserved.</footer>
+    <footer>&copy; 2024 Sakhi Drapes. All rights reserved.</footer>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
