--- a/Drapes/contact.html
+++ b/Drapes/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sathya Drapes</title>
+    <title>Sakhi Drapes</title>
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
         <div class="navbar">
-            <h3><a href="index.html">Sathya Drapes</a></h3>
+            <h3><a href="index.html">Sakhi Drapes</a></h3>
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
@@ -83,7 +83,7 @@
         <p>You will receive an email shortly to confirm your appointment.</p>
     </div>
 
-    <footer>&copy; 2024 Sathya Drapes. All rights reserved.</footer>
+    <footer>&copy; 2024 Sakhi Drapes. All rights reserved.</footer>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
