--- a/Drapes/servicesAndPricing.html
+++ b/Drapes/servicesAndPricing.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sathya Drapes</title>
+    <title>Sakhi Drapes</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="header">
         <div class="navbar">
-            <h3><a href="index.html">Sathya Drapes</a></h3>
+            <h3><a href="index.html">Sakhi Drapes</a></h3>
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
@@ -39,7 +39,7 @@
         <!-- Add more services and prices as needed -->
     </div>
 
-    <footer>&copy; 2024 Sathya Drapes. All rights reserved.</footer>
+    <footer>&copy; 2024 Sakhi Drapes. All rights reserved.</footer>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
