--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sakhi Drapes</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="Drapes/css/style.css">
 </head>
 <body>
     <div class="header">
@@ -12,12 +12,12 @@
             <h3><a href="index.html">Sakhi Drapes</a></h3>
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <!-- <li><a href="ourTeam.html">OUR TEAM</a></li> -->
-                <li><a href="drapingStyles.html">DRAPING STYLES</a></li>
-                <!-- <li><a href="gallery.html">GALLERY</a></li> -->
-                <li><a href="servicesAndPricing.html">SERVICES & PRICING</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="Drapes/about.html">ABOUT</a></li>
+                <!-- <li><a href="Drapes/ourTeam.html">OUR TEAM</a></li> -->
+                <li><a href="Drapes/drapingStyles.html">DRAPING STYLES</a></li>
+                <!-- <li><a href="Drapes/gallery.html">GALLERY</a></li> -->
+                <li><a href="Drapes/servicesAndPricing.html">SERVICES & PRICING</a></li>
+                <li><a href="Drapes/contact.html">CONTACT</a></li>
             </ul>
         </div>
         <div class="title">
@@ -25,6 +25,6 @@
         </div>
     </div>
     <footer>&copy; 2024 Sakhi Drapes. All rights reserved.</footer>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="Drapes/js/main.js"></script>
 </body>
 </html>
