rerouted files and changed background color

--- a/Drapes/contact.html
+++ b/Drapes/contact.html
@@ -11,9 +11,9 @@
 <body>
     <div class="header">
         <div class="navbar">
-            <h3><a href="index.html">Sakhi Drapes</a></h3>
+            <h3><a href="../index.html">Sakhi Drapes</a></h3>
             <ul>
-                <li><a href="index.html">HOME</a></li>
+                <li><a href="../index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <!-- <li><a href="ourTeam.html">OUR TEAM</a></li> -->
                 <li><a href="drapingStyles.html">DRAPING STYLES</a></li>
