--- a/Drapes/ourTeam.html
+++ b/Drapes/ourTeam.html
@@ -10,9 +10,9 @@
 <body>
     <div class="header">
         <div class="navbar">
-            <h3><a href="index.html">Sakhi Drapes</a></h3>
+            <h3><a href="../index.html">Sakhi Drapes</a></h3>
             <ul>
-                <li><a href="index.html">HOME</a></li>
+                <li><a href="../index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <!-- <li><a href="ourTeam.html">OUR TEAM</a></li> -->
                 <li><a href="drapingStyles.html">DRAPING STYLES</a></li>
@@ -50,6 +50,6 @@
     </div>
 
     <footer>&copy; 2024 Sakhi Drapes. All rights reserved.</footer>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
