--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h3><a href="index.html">Sakhi Drapes</a></h3>
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="https://www.sakhidrapes.com/Drapes/about.html">ABOUT</a></li>
+                <li><a href="Drapes/about.html">ABOUT</a></li>
                 <!-- <li><a href="Drapes/ourTeam.html">OUR TEAM</a></li> -->
                 <li><a href="Drapes/drapingStyles.html">DRAPING STYLES</a></li>
                 <!-- <li><a href="Drapes/gallery.html">GALLERY</a></li> -->
