Updated about me message

--- a/Drapes/about.html
+++ b/Drapes/about.html
@@ -28,7 +28,7 @@
 
     <div class="about-me">
         <img src="https://t3.ftcdn.net/jpg/01/65/63/94/360_F_165639425_kRh61s497pV7IOPAjwjme1btB8ICkV0L.jpg" alt="Portrait of Person" class="portrait">
-        <p class="description">John Doe is an experienced professional with a passion for excellence. With over 10 years in the industry, John has consistently demonstrated a commitment to quality and innovation. Outside of work, John enjoys hiking, reading, and spending time with family.</p>
+        <p class="description">With a deep passion for the art of saree draping, I find joy in exploring the intricate ways this traditional attire can be styled. My love for sarees is not just about fashion but a celebration of culture and elegance, making every drape a unique expression of creativity and grace.</p>
     </div>
 
     <footer>&copy; 2024 Sakhi Drapes. All rights reserved.</footer>
